# robotics_project

./: .env  .gitignore  BUGS.md  CLAUDE.md  frames_2026-04-20_00.09.49.gv  lidar.txt  make_robot_move.txt
.devcontainer/: Dockerfile  devcontainer.json
docker/: .env  Dockerfile  Dockerfile.init-bootstrap  docker-compose.yml  init_bootstrap.sh
src/face_pkg/: encodings.pickle  face_node.py  facial_recognition.py  model_training.py
src/face_recognition/: empty.py
src/lowlevel/: README.md  package.xml  setup.cfg  setup.py
src/lowlevel/launch/: lowlevel.launch.py
src/lowlevel/lowlevel/: IMU_test.py  gpiozero_servo.py  gpiozero_servo_sub.py  gpiozero_stepper_motor_1.py  gpiozero_stepper_motor_2.py
src/my_face_pkg/: nextsteps.txt  package.xml  setup.py
src/my_face_pkg/my_face_pkg/: facial_recognition_node.py
src/real_bot/: CMakeLists.txt  package.xml
src/real_bot/config/: ekf.yaml  nav2_params.yaml  slam_params.yaml  waypoints.yaml
src/real_bot/description/: imu.xacro  inertial_macros.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
src/real_bot/face_launch/: controller_node.py  robot_launch.py
src/real_bot/launch/: ekf.launch.py  real_bringup.launch.py  real_bringup_dr.launch.py  real_nav.launch.py  real_slam.launch.py  real_slam_dr.launch.py  real_slam_host.launch.py  real_slam_simple.launch.py  real_teleop.launch.py  rsp.launch.py
src/real_bot/maps/: my_map.pgm  my_map.yaml
src/real_bot/scripts/: stepper_odom.py
src/sim_bot/: CMakeLists.txt  package.xml
src/sim_bot/config/: controllers.yaml  ekf.yaml  nav.rviz  nav2_params.yaml  slam.rviz  slam_params.yaml  waypoints.yaml
src/sim_bot/description/: gazebo_control_plugin.xacro  imu.xacro  inertial_macros.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
src/sim_bot/launch/: nav.launch.py  rsp.launch.py  sim_full.launch.py  sim_gazebo.launch.py  sim_nav.launch.py  sim_teleop.launch.py  slam.launch.py  teleop.launch.py
src/sim_bot/maps/: house_map.pgm  house_map.yaml
src/sim_bot/scripts/: cmd_vel_relay.py  waypoint_navigator.py
src/sim_bot/worlds/: empty.world  house.world
src/voice_pkg/: audio_feedback.py  voice_command.py  voice_node.py
